# Imprint

./: .env.example  .gitignore  Makefile  README.md  imprint.db  mypy.ini  pyproject.toml  tasks.py  tmp_aiosqlite5.db  tmp_async_test.db
app/: config.py  indexer.py  main.py  template_utils.py
app/admin/: backup.py  routes.py  schemas.py  service.py  token.py
app/auth/: routes.py  schemas.py  service.py
app/comments/: service.py
app/db/: models.py  schema_upgrade.py  session.py
app/nostr/: event.py  key.py  relay.py  relay_client.py  signers.py
app/services/: admin_events.py  engagement.py  essays.py
app/static/: auth.js  comments.css  editor.css  editor.js  engagement_batch.js  styles.css  zap.js
app/templates/: base.html  drafts.html  editor.html  essay_detail.html  essays.html  history.html  history_revisions.html  index.html  settings.html
app/templates/admin/: backup.html  base.html  index.html  login.html  logs.html  overview.html  settings.html
app/templates/debug/: session.html
docs/: implementation_audit.md  manual_smoke_test.md  post_storage_investigation.md  remediation_plan.md
tests/: conftest.py  test_acl.py  test_admin_console.py  test_admin_token_generator.py  test_auth_guards.py  test_auth_sessions.py  test_backup.py  test_comments.py  test_db_safety.py  test_drafts.py  test_editor_ui.py  test_engagement.py  test_essay_service.py  test_history_revisions.py  test_models.py  test_nostr_event.py  test_recent_essays.py  test_revise_authorization.py  test_schema_upgrade.py  test_session_cookie.py  test_settings.py  test_theme_accent.py
(+15 files in other folders)
